# databricks-alembic-example

./: .gitignore  README.md  pyproject.toml
databricks_alembic_example/: alembic.ini  connect.py  insert.py  model.py
databricks_alembic_example/alembic/: env.py
databricks_alembic_example/alembic/versions/: 81ad0f6073ba_foo_col_and_comment.py  bdade81ccfc4_initial_table.py
