[build-system]
requires = ["setuptools"] # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.


[project]
name = "alembic-demo"
version = "1.0.0" # REQUIRED, although can be dynamic
description = "a minimal example for using sqlalchemy & alembic in databricks"

readme = "README.md"

requires-python = ">=3.9"

authors = [{ name = "Marian Reuss", email = "marian.reuss@databricks.com" }]
maintainers = [{ name = "Marian Reuss", email = "marian.reuss@databricks.com" }]


classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["SQLAlchemy", "alembic", "databricks-sql-connector"]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[tool.setuptools]
packages = ["databricks_alembic_example"]
